// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactions color editor interactions ability to change color of clicked splotch 1`] = `
<body>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="clay-color-picker"
    >
      <label>
        Custom Colors
      </label>
      <div
        class="input-group clay-color"
        style=""
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker2"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFFFFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFFFFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFFFFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu clay-color-dropdown-menu show"
        role="presentation"
        style="left: -999px; top: -995px;"
        tabindex="0"
      >
        <div>
          <div
            class="clay-color-header"
          >
            <span
              class="component-title"
            >
              Custom Colors
            </span>
            <button
              aria-label="close"
              class="close component-action"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  href="/test/path#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="clay-color-swatch"
          >
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn btn"
                style="background: rgb(91, 176, 165);"
                title="#5BB0A5"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn btn"
                style="background: rgb(0, 255, 255);"
                title="#00FFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn btn"
                style="background: rgb(0, 0, 255);"
                title="#0000FF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn active clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
            <div
              class="clay-color-swatch-item"
            >
              <button
                class="clay-color-btn clay-color-btn-bordered btn"
                style="background: rgb(255, 255, 255);"
                title="#FFFFFF"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="clay-color-form-group"
        >
          <div
            class="clay-range clay-color-slider clay-color-slider-hue"
          >
            <div
              class="clay-range-input"
            >
              <input
                class="form-control-range"
                data-testid="hueSlider"
                max="360"
                min="0"
                step="1"
                style="color: rgb(255, 0, 0);"
                type="range"
                value="0"
              />
              <div
                class="clay-range-track"
              />
              <div
                class="clay-range-progress"
                style="width: 0%;"
              >
                <div
                  class="clay-range-thumb"
                />
              </div>
            </div>
          </div>
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-before"
                data-testid="hInput"
                max="360"
                min="0"
                type="number"
                value="0"
              />
              <label
                class="input-group-inset-item input-group-inset-item-before"
              >
                H
              </label>
            </div>
          </div>
        </div>
        <div
          class="clay-color-map-group"
        >
          <div
            class="clay-color-map clay-color-map-hsb"
            style="background-color: rgb(255, 0, 0);"
          >
            <button
              aria-label="Saturation and brightness"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              aria-valuetext="Saturation 0%, brightness 100%"
              class="clay-color-map-pointer clay-color-pointer"
              role="slider"
              style="background: rgb(255, 255, 255); left: -7px; top: -7px;"
              type="button"
            />
          </div>
          <div
            class="clay-color-map-values"
          >
            <div
              class="form-group"
            >
              <div
                class="input-group"
              >
                <div
                  class="input-group-item input-group-item-focusable"
                >
                  <input
                    class="form-control input-group-inset input-group-inset-before"
                    data-testid="rInput"
                    max="255"
                    min="0"
                    type="number"
                    value="255"
                  />
                  <label
                    class="input-group-inset-item input-group-inset-item-before"
                  >
                    R
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group"
            >
              <div
                class="input-group"
              >
                <div
                  class="input-group-item input-group-item-focusable"
                >
                  <input
                    class="form-control input-group-inset input-group-inset-before"
                    data-testid="gInput"
                    max="255"
                    min="0"
                    type="number"
                    value="255"
                  />
                  <label
                    class="input-group-inset-item input-group-inset-item-before"
                  >
                    G
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group"
            >
              <div
                class="input-group"
              >
                <div
                  class="input-group-item input-group-item-focusable"
                >
                  <input
                    class="form-control input-group-inset input-group-inset-before"
                    data-testid="bInput"
                    max="255"
                    min="0"
                    type="number"
                    value="255"
                  />
                  <label
                    class="input-group-inset-item input-group-inset-item-before"
                  >
                    B
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="clay-color-form-group"
        >
          <div
            class="clay-range clay-color-slider clay-color-slider-alpha"
          >
            <div
              class="clay-range-input"
            >
              <input
                class="form-control-range"
                max="1"
                min="0"
                step="0.01"
                style="color: rgb(255, 255, 255);"
                type="range"
                value="1"
              />
              <div
                class="clay-range-track"
              />
              <div
                class="clay-range-progress"
                style="width: 0%;"
              >
                <div
                  class="clay-range-thumb"
                />
              </div>
            </div>
          </div>
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-before"
                data-testid="aInput"
                max="1"
                min="0"
                step="0.01"
                type="number"
                value="1"
              />
              <label
                class="input-group-inset-item input-group-inset-item-before"
              >
                A
              </label>
            </div>
          </div>
        </div>
        <div
          class="clay-color-footer"
        >
          <div
            class="form-group"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item input-group-item-focusable"
              >
                <input
                  class="form-control input-group-inset input-group-inset-before"
                  data-testid="customHexInput"
                  type="text"
                  value="DDDDDD"
                />
                <label
                  class="input-group-inset-item input-group-inset-item-before"
                >
                  #
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions opens custom color picker drop down when clicked 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    class="clay-color-picker"
  >
    <label>
      Custom Colors
    </label>
    <div
      class="input-group clay-color"
      style=""
    >
      <div
        class="input-group-item input-group-item-shrink input-group-prepend"
      >
        <input
          name="colorPicker2"
          style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
          tabindex="-1"
          type="text"
          value="#008000"
        />
        <div
          class="input-group-text"
        >
          <button
            aria-label="Select a color"
            class="clay-color-btn dropdown-toggle btn"
            style="background: rgb(0, 128, 0);"
            title="#008000"
            type="button"
          />
        </div>
      </div>
      <div
        class="input-group-item input-group-item-focusable input-group-append"
      >
        <input
          aria-label="Color selection is 008000"
          class="form-control input-group-inset input-group-inset-before"
          type="text"
          value="008000"
        />
        <label
          class="input-group-inset-item input-group-inset-item-before"
        >
          #
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Interactions opens custom color picker drop down when clicked 2`] = `null`;

exports[`Rendering default 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering disabled palette 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering disabled state 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              disabled=""
              style="background: rgb(255, 255, 255);"
              title="#FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            disabled=""
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering renders w/ var() 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="var(--blue)"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              title="var(--blue)"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is var(--blue)"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="var(--blue)"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering renders with a hash for the value 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering renders with a named color for the value 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="red"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle btn"
              style="background: red;"
              title="red"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is red"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="red"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering small color-picker 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <label>
        Small
      </label>
      <div
        class="input-group clay-color input-group-sm"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <input
            name="colorPicker1"
            style="height: 0px; position: absolute; visibility: hidden; width: 0px;"
            tabindex="-1"
            type="text"
            value="#FFF"
          />
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="clay-color-btn dropdown-toggle clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu clay-color-dropdown-menu"
        role="presentation"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(95, 95, 95);"
              title="#5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(154, 154, 154);"
              title="#9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(203, 203, 203);"
              title="#CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(225, 225, 225);"
              title="#E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 255, 255);"
              title="#FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 13, 13);"
              title="#FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 138, 28);"
              title="#FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(43, 166, 118);"
              title="#2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(0, 110, 248);"
              title="#006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(127, 38, 255);"
              title="#7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 33, 160);"
              title="#FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 95, 95);"
              title="#FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 180, 110);"
              title="#FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(80, 210, 160);"
              title="#50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(75, 155, 255);"
              title="#4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(175, 120, 255);"
              title="#AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 115, 195);"
              title="#FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 177, 177);"
              title="#FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 222, 192);"
              title="#FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(145, 227, 195);"
              title="#91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(157, 200, 255);"
              title="#9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(223, 202, 255);"
              title="#DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 197, 230);"
              title="#FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 217, 217);"
              title="#FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(255, 243, 232);"
              title="#FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(177, 235, 213);"
              title="#B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(197, 223, 255);"
              title="#C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn clay-color-btn-bordered btn"
              style="background: rgb(248, 242, 255);"
              title="#F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="clay-color-btn btn"
              style="background: rgb(255, 237, 247);"
              title="#FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
